# XLSLM

./: README.md  requirements.txt
Configs/: anlp_4el_d125_lr1e-3_16kstp.json  anlp_4el_d125_lr1e-4_16kstp.json  anlp_4el_d125_lr3e-4_16kstp.json  anlp_4el_d125_lr55e-5_16kstp.json  anlp_4el_d125_lr5e-4_16kstp.json  anlp_4el_d125_lr65e-5_16kstp.json  anlp_4el_d125_lr6e-4_16kstp.json  anlp_4el_d125_lr75e-5_16kstp.json  anlp_4el_d125_lr7e-4_16kstp.json  anlp_4el_d125_lr85e-5_16kstp.json  anlp_4el_d125_lr8e-4_16kstp.json  anlp_4el_d125_lr95e-5_16kstp.json  anlp_4el_d125_lr9e-4_16kstp.json  anlp_4el_d25_lr1e-3_16kstp.json  anlp_4el_d25_lr55e-5_16kstp.json  anlp_4el_d25_lr5e-4_16kstp.json  anlp_4el_d25_lr65e-5_16kstp.json  anlp_4el_d25_lr6e-4_16kstp.json  anlp_4el_d25_lr75e-5_16kstp.json  anlp_4el_d25_lr7e-4_16kstp.json  anlp_4el_d25_lr85e-5_16kstp.json  anlp_4el_d25_lr8e-4_16kstp.json  anlp_4el_d25_lr95e-5_16kstp.json  anlp_4el_d25_lr9e-4_16kstp.json  kiche_1024_d25_lr1e-3.json  kiche_1024_d50_lr75e-5.json  kiche_1024_pt_d50_lr1e-3.json  kiche_2048_d125_lr1e-3.json  kiche_2048_d125_lr1e-4.json  kiche_2048_d125_lr25e-5.json  kiche_2048_d125_lr5e-4.json  kiche_2048_d125_lr75e-5.json  kiche_2048_d25_lr1e-3.json  kiche_2048_d25_lr1e-4.json  kiche_2048_d25_lr25e-5.json  kiche_2048_d25_lr5e-4.json  kiche_2048_d25_lr75e-5.json  kiche_2048_d50_lr1e-3.json  kiche_2048_d50_lr1e-4.json  kiche_2048_d50_lr25e-5.json  (+82 more)
Data/AmericasNLP/: anlp_downsampled_w2v_32ep.npy  anlp_downsampled_w2v_32ep_indices.json  anlp_quy_sz_w2v_32ep.npy  anlp_quy_sz_w2v_32ep_indices.json  anlp_w2v_32ep.npy  anlp_w2v_32ep_indices.json  combined_stats.txt  dev.anlp  dev.anlp.stats  dev_combined.txt  dev_stats.anlp  readme.md  stats_dev.anlp  stats_train.anlp  train.anlp.stats  train_balanced.anlp.stats  train_downsampled.anlp.stats  train_stats.anlp
Data/AmericasNLP/Ashaninka/: dev.cni  dev.cni.stats  dev.mono.cni.stats  dev_stats.cni  stats_dev.cni  stats_train.cni  train.cni  train.cni.stats  train.mono.cni.stats  train_1.mono.cni  train_1.mono.cni.stats  train_15k.cni  train_2.mono.cni  train_2.mono.cni.stats  train_stats.cni
Data/AmericasNLP/Aymara/: dev.aym  dev.aym.stats  dev_stats.aym  stats_dev.aym  stats_train.aym  train.aym  train.aym.stats  train.txt  train_stats.aym
Data/AmericasNLP/Bribri/: dev.bzd  dev.bzd.stats  dev_stats.bzd  stats_dev.bzd  stats_train.bzd  train.bzd  (+2 more)
Data/AmericasNLP/Guarani/: dev.gn  dev.gn.stats  dev.gug.stats  dev.txt  dev_stats.gn  stats_dev.gn  stats_train.gn  train.gn  train.gn.stats  train.gug  train.gug.stats  train_15k.gug  train_stats.gn
Data/Global Classroom/: k_iche__segmented_dev.txt
Data/GlobalClassroom/: dev.quc  devtest.quc  devtest_words.quc  kiche_segmented_test.txt  kiche_unsegmented_dev.txt  kiche_unsegmented_test.txt  kiche_unsegmented_train.txt  quc_1024_w2v_32ep.npy  quc_1024_w2v_32ep_indices.json  quc_2048_w2v_32ep.npy  quc_2048_w2v_32ep_indices.json  quc_256_w2v_32ep.npy  quc_256_w2v_32ep_indices.json  quc_2e10_w2v_32ep.npy  quc_2e10_w2v_32ep_indices.json  quc_2e11_w2v_32ep.npy  quc_2e11_w2v_32ep_indices.json  quc_2e12_w2v_32ep.npy  quc_2e12_w2v_32ep_indices.json  quc_2e13_w2v_32ep.npy  quc_2e13_w2v_32ep_indices.json  quc_2e14_w2v_32ep.npy  quc_2e14_w2v_32ep_indices.json  quc_2e15_w2v_32ep.npy  quc_2e15_w2v_32ep_indices.json  quc_2e8_w2v_32ep.npy  quc_2e8_w2v_32ep_indices.json  quc_2e9_w2v_32ep.npy  quc_2e9_w2v_32ep_indices.json  quc_4096_w2v_32ep.npy  quc_4096_w2v_32ep_indices.json  quc_512_w2v_32ep.npy  quc_512_w2v_32ep_indices.json  quc_8192_w2v_32ep.npy  quc_8192_w2v_32ep_indices.json  quc_w2v_32ep.npy  quc_w2v_32ep_indices.json  segmented_train.quc  test.quc  train_1024.quc  (+13 more)
Data/KannEtAl2018/: dev.hch  dev.mfy  dev.nah  dev.nci
Data/Multilingual Corpus/: mexicanero.txt  nahuatl.txt  purepecha.txt  wixaria.txt
Data/MultilingualCorpus/: mexicanero.txt  nahuatl.txt  wixaria.txt  yorem_nokki.txt
DevConfigs/: anlp_dev_config.json  kiche_dev_config.json
Models/: anlp_4el_d25_lr1e-3_16kstp_vocab.yaml  anlp_full_4el_d125_lr75e-5_16kstp_vocab.yaml  quechua_d125_lr65e-5_vocab.yaml
Output/: anlp_4el_d125_lr75e-5_16kstp.csv
Output/XLTransfer/: anlp_4el_d125_lr75e-5_16kstp_best_loss.out  anlp_4el_d125_lr75e-5_16kstp_best_loss.score  anlp_4el_d25_lr1e-3_16kstp_best_loss.out  anlp_4el_d25_lr1e-3_16kstp_best_loss.score  kiche_1024_d25_lr1e-3.csv  kiche_1024_d25_lr1e-3_best_loss.out  kiche_1024_d25_lr1e-3_best_loss.score  kiche_1024_d50_lr75e-5.csv  kiche_1024_d50_lr75e-5_best_loss.out  kiche_1024_d50_lr75e-5_best_loss.score  kiche_1024_pt-full_d50_lr5e-4.csv  kiche_1024_pt-full_d50_lr5e-4_best_loss.out  kiche_1024_pt-full_d50_lr5e-4_best_loss.score  kiche_1024_pt_d50_lr1e-3.csv  kiche_1024_pt_d50_lr1e-3_best_loss.out  kiche_1024_pt_d50_lr1e-3_best_loss.score  kiche_1024_pt_d50_lr25e-5.csv  kiche_1024_pt_d50_lr25e-5_best_loss.out  kiche_1024_pt_d50_lr25e-5_best_loss.score  kiche_1024_ptquy_d50_lr75e-5.csv  kiche_1024_ptquy_d50_lr75e-5_best_loss.out  kiche_1024_ptquy_d50_lr75e-5_best_loss.score  kiche_2048_d125_lr1e-3.csv  kiche_2048_d125_lr1e-3_best_loss.out  kiche_2048_d125_lr1e-3_best_loss.score  kiche_2048_d125_lr1e-4.csv  kiche_2048_d125_lr25e-5.csv  kiche_2048_d125_lr5e-4.csv  kiche_2048_d125_lr75e-5.csv  kiche_2048_d25_lr1e-3.csv  kiche_2048_d25_lr1e-3_best_loss.out  kiche_2048_d25_lr1e-3_best_loss.score  kiche_2048_d25_lr1e-4.csv  kiche_2048_d25_lr25e-5.csv  kiche_2048_d25_lr5e-4.csv  kiche_2048_d25_lr75e-5.csv  kiche_2048_d25_lr75e-5_best_loss.out  kiche_2048_d25_lr75e-5_best_loss.score  kiche_2048_d50_lr1e-3.csv  kiche_2048_d50_lr1e-4.csv  (+388 more)
RunScripts/: get_file_stats.sh  prepare_anlp.sh  remove_duplicate_lines.sh  run_mslm.sh  run_mslm_dev_config.sh  run_slm_pt.sh
Tools/: AmericasNLPDataPreparation.py  GlobalClassroomDataPreparation.py  KannEtAl2018DataPreparation.py  RemoveDuplicateLines.py  downsample_file.py  file_stats.py  get_w2v.py  prepare_americas_nlp.py  prepare_global_classroom.py  remove_duplicate_lines.py  stats.py
mslm/: __init__.py  __main__.py  dev_config.py  mslm_config.py  segmental_lm.py  segmental_transformer.py  slm.py
(+95 files in other folders)
