Oî 20 tapicha omba'apo reínteva ko'êko'êre.
Areko peteî VCR ha ombojevy heta jey ndoikoporâi rupi ha ko'áĝa peve ndohechauka porâi gueteri ta'ânga ipype.
Upe Teatro Cívico omba'apo mokôi arýnte.
Ko'êko'êre ohecha heindýpe.
Áraniko hesakâ ha hovy asy, ndaijarairietevoi.
Omba'apóva guive ápe ohupyty heta viru.
Amba'eporanduse Ramona-pe.
Aikuaa porâiterei opa mba'e papapy.
Teatro Cívico oikotevê 1 millón $.
Ndetavy, ipurasántema ko demanda.
Oñangareko haĝua, chentese rekópe, hekove ha iñemuha rehe.
Becky oî mbo'esyry 8hápe.
Ahendu naiporâiha.
Ha'e oemondýi, ndaikatúi oime ha'emba'e ohapy mba'eve, oñeha'âmbareimínte.
Mba'evete vera ndojekái.
Snake River henyhê mbóigui.
Upe arape añemondýi añete.
Mitâ ñeñangareko reiete ojejapo okaháre.
Remba'apova'erâ 10 aravo pype ikatu haĝuáicha nderatupyry ipype.
Orepo'a ikatúre orepytyvô Rudolph Anderson U2 ndive.
IU-pegua mbo'ehao mo'âhára oñemboty ymaiterei.
IRT omba'apo ñoha'ânga rehe.
Joaju neporâva nilko oî ko'êko'êre oî rupi upe Aty Joajurâ ñepytyvô.
Nda'úiva mymba ndajajepokuaáiva oje'umeme.
Sapy'ánte oî empresa tuicháva nepytyvôva rehepyme'ê haĝua nde rekombo'e.
Granny oguata'imi upe óga guive.
Namba'apói ha ndapytu'úi ave.
Rehópikora'e campamento oikóva okahápe?
Ko'â ogapy oikotevê viru ojejapo haĝua.
Ñane mymba renda oñemohenda biomas umi mymba rekoha añeteguáramo voi.
Ikatu reho.
Peteî arapokôindynte ipuku.
Opaite viru reme'êva oho arandu rekarâ.
Opyta Augusta-pe guyryry rire?
Ñanemongyhyje añete upe vytu pochy oguahêva távape.
Opaite viru ojaporu ojeheka arandu cáncer oñemboguevi rekávo.
Ahejava'ekue mbo'ehaovusu 2002 ramo.
JoAnn ha Urban oguerovy'a ramoite 50 ro'y omendahague ohoramoguare Vietnam-pe.
Ne marandu oñemboguapýuta kuatia techaukarâme reme'êramo 100 $ ári.
Greneral May márô ndohóiva Mburuvichavete Kennedy mba'apoha rendápe.
Ajeasegura haĝua añapytîtu'u ijevilla.
ögape areko mokôi computadora.
JoAnn he'íkuri ha'e ha Urban peteî jasy omendahague ohoramoguare Vietnam-pe.
Ramona noîriva Concord-pe.
Ndoikói mba'eve ndereikuaáiramo mba'eve hesegua.
Opyta Augusta-pe?
Amba'apo ha oiporupaite aravo arekomíva.
kóva ko ary ipaha rohepyme'êta ko jeikerâ.
Rohókuri ore ñemoñarê mbo'esyry ñemohu'âhápe Gran Rapids-pe.
Rehecha ñoha'ânga IRT-pe niko nembopytu'úta, ombovevýta ne rembiapo pohýi ha repensáta.
Ndajajuhúi joaju porâ árupi.
Mba'epyahúniko ombohetave marandu ñemono'ô pya'eteve, ymave ni nañaimo'âiva.
Mba'evete ndajahupytýi.
Naiporâiete heta hendápe okaháre.
Ndahetáiramo oútava, ikatu ndoikói upe vy'a guasu.
Areko peteî computadora Apple ha HP ógape.
…arai ryjúi morotîsakâva upe ára hovýpe.
Upe Teatro Cívico Indianapolis-gua ojapo 120 tembiapo techaukarâ 80 ro'ýpe.
Ko amombe'úva peême ko pyhare oñe'ê che ru rehe ha tekoeta oîva'ekue ovaramoguare Estados Unidos-pe.
Akâ jeguaka laurel-gui ojejapóva, olivo rakâ ha acanto rogue ombojegua pyrûha rembe'y.
Añeha'â amohu'â ta'ânga guasu che mbo'ehakotýpe ĝuarâ ha umi haicha pyahu chepytyvô.
Aikotevêmi nderehe.
Ohenói isýpe oguejymíre mba'yrúgui.
Mbo'ehao mo'âhára oñembokatupyryhaperaêvete ohupyty upe viru porupyrâ ñekytî.
Añeha'â antende.
Ko'à mba'e rojapo rojúvo 80 ro'y pukukue árima.
Mbo'ehao ombokatupyrýva mo'âhararâme niko oipe'a hokê 100 ro'y pukukue ha oreko 5539 temimbo'e.
Umi mba'e orekóva ojeka jojapanunga
Oje'e chupe okeva'erâha upe kuimba'e ndive.
Oî avei ambue kuatiápe isâ'ÿva oku'e porâitemíva avei.
Hi'â ko apañuâi nemokyre'ÿ pyahuetejey.
Nachemandu'ái mboýpa omba'apóva orendive.
Avicheamíta ko'â marandu.
Iporâ jareko jaiko haĝua.
Ha'e Irlanda-ygua.
Becky temimbo'e.
Ha'usete chokoláte kambýre.
Naiporâi remombe'u rerekoha alarma.
Py'ÿi apensa hese.
Háaaa… heterei.
Ndahechái upe tapicha ojapóva upe arakôi.
Amba'apo ko'â mba'e hechapyrâvape heta ary.
Anderson itenonde Reagan rehe.
Nachemandu'aietevoi.
Ñoha'ânga oipytyvô heta mitâme Indiana tuichakue javeve.
Ohókuri túva árape ha Ellen akói oñangareko hese.
Supporting Goodwill oipytyvôta Indiana-yguápe.
Aimo'â oñekytîva'erâha hi'upy repýpe ha anitei arandukápe.
Heta aheka, upe aranduka iñambusu ha ñandesareapa.
Ñane Mbo'ehao oñembokatupyryhápe mo'âhararâ oñesâingo viru privado rehente.
Oje'e ndaikatuiha gueteri ojeho moôve.
Ajejure peême  peme'êmi haĝua 10 $ ASPCA-pe.
Upechaite opyta oñeñapytî.
Urban ohoramoguare Vietnam-pe ore romenda ramoite, he'i JoAnn.
Reñemoîkuaava'erâ ambue tapicha rendápe.
Ko'â oga'apo ndahepýipe osê.
Sociedad Maennerchor omoĝuahê viru oñeme'êva.
CIA oimo'â ONU oikotevêha ohecha upe ta'ângamýi upe jave.
Arekopaite marandu aikotevêkuaátava.
Oimeraê tapicha ohepyme'êva ñembokatupyry mba'aporâ rehe ohundi 5$
Nachemandu'ái mboýpa roreko.
Katu ja'eva'erâ ja'u hetaitereihague mapache, mykurâ ha karumbe opaichagua.
Ikatu orepytyvô roipysove haĝua ore rembiapo.
Anderson oñua'â Reagan ndive isa'ÿvaramo.
Santo oñembokatupyry tatajokoharâ, kóva peteì mba'e ohayhúva ha'e.
McCoy nekonvida reme'ê haĝua 10.000 $ Empresa Fundación-pe.
Indiana ombotove upe mbo'ehao tâi reheguápe oipytyvô haĝua.
Oî 158 vore ha romboja'ómante, rombojoajujey ha romboja'ojey ha ndorojavýiva'erâ.
Nahániri, peteîjeýnte ohókuri pyharevekue ha he'íkuri oujeytaha ko mba'apoha rendápe.
Ojehayhu'ietereígui oñemoangirû mondaha ha oporojukaha rehe.
Epytamava'erâ pepete.
Ára neporâva ñanemombytu'úva.
Roikotevê viru roheka ha rombokatupyry haĝua mbo'ehárape.
Roho upe óga okaygua Minnesota-pe.
Ha ha'e he'i: Mama, aime ógape.
Mokôi aviô ohehundi.
Roha'arô peipytyvô jey ko arýpe tembiapo tekombo'e ha mba'e porâ rehegua ogueroguatáva Civic theatre.
Opaichagua mymba atantea hi'upýramo.
Amohu'â mbo'ehaovusu ha chekuatiapa.
Oñehundi mokôi aviô ara vai rupi.
ñembokatupyry mba'aporâme ojeporúramo 00, peteî tapicha ohupytýtavape oñeñongatukuaa 3$
Ndepa ere umi kuatiahaipyre Colorado Sping-pegua onohê marandu ñande rekohapegua.
Umi orepytyvôva py'a porâme rupivente heta mba'e rohupyty.
Peichaite chejora hikuái.
Che jarýi onace 1899-pe.
Becky-pe nde'isei mba'eve.
Ko karai oisâmbyhýva upe Indiana Asociación Dental oîna ko Atyha tenondegua ñane retâme omoirûvo hemime'ê imbo'ehao tâi rehegua.
Mba'e jajapo ja'e haĝua?
Ndahechái.
Santo oiko New York-pe ha omba'apo upe O2 alto Regulador-pe.
Mba'epyahuniko ñanembopya'e.
Mbo'ehao mo'âhára oñembokatupyryha ohupyty 1 millón de dólares hetave jepiveguágui.
Upe tendaniko cemento memete ha ivai.
Oñembyai sa'isa'ípe.
Ndahepyiete, ndoikói avei.
Aguerohoryrasa upe vy'aguasu kañymby oñembosako'íva'ekue.
Granny oñemombyry'imi hógagui.
Katu, ema'emi, epensami hese.
Ndoroipotái ndoroguerohorýi umi marandu apegua ha ndoreokói pukoe arupigua.
Ilasáña hetereive upe vutifarra itai'imíva omoî rehe chupe.
Hepy ho'a porâiterei hese.
Retanteava'erâniko opaichagua tembi'u ipyahúva.
Oîva guive ipype omba'apo reiete.
Snake River, heta mbói ipype.
Indiana tava mbytepegua noñembokatupyrýiva omba'apo haĝua.
Ahechapa.
Oîramo sobrecarga hyapu'i.
Ahai peême a'aguyjeme'ê haĝua peême pende jopói arandukakoty IUPUI university-pe ha ajejurejeývo peême pene pytyvô.
ko Atyha añetehápe oipytyvôse komunidápe.
Óga porâporâ upe táva rembe'ýpe jajuhu.
Nda'areguasúi añemoarandu Londres-pe poteî jasy pukukue.
Ne lasáña heterei.
Ha'e okirirî ha omaña imesa gotyo.
Ko Atyha oipytyvôse komunidaygua imboriahúvape.
Ni natanteái ajapo haĝua.
Ndaikuaaporâi, katu aime porâiterei. Oî porâ ñañomongeta upe pyhare.
Upe jeike repy oguejy 40%..
Aha'arô tove ko apañuâi tanderovasa ha nemokyre'ÿ.
Snake River, oreko heta karumbe oporusu'úva.
Goodwill ñepytyô ikatu omboguejy mba'apo'ÿ.
Rohenoijeýta aĝamive, he'i.
Peteîteî oike upe tekojoja rekojoajúpe.
Osê yvytu pepóre.
Umi ao pópe ijapopyre.
Ñasê porâ meme jahávo.
Ahecha'aína ijápa V6.
Ndaipóri gatillo embokapu haĝua.
túva oreko 2000 há. Iñemitÿmbyre yvy.
Roguerovy'aite ko Indianapolis Teatro Cívico omba'apohague ko'â 85 ro'y pukukue.
Santo omba'apo Disney-pe ĝuarâ ha omba'apo te taza rehe.
Araka'eve noñendundíri peteî aviôntejepe.
Umi pilñotope ojehecha amo 20 jey rupi peteî jasýpe umi ta'ânga onohêva ijyvatekue tuichávape.
Kóva ko atyjere viru ñemono'ôrâ ipaha jajapótava ko ary ryepýpe. Roikotevê ne pytyvô!!
Oho hikuái ko'êkoêre.
Reime haĝua ko'â mokôi ary rehepyme'êva'erâ 800 $.
Vokoiete, peteî tapicha IRT-gua nerenóita pumbyrýpe ere haĝua moýpa ikatúta reme'ê.
Areko cooperativa oiporukáva viru ahahápe.
Nda'úvai ka'avop jehe'a, chembojeguaru!.
Upe aty'i sâmbyhyha myakâhára
Oiko upe máva he'iháicha.
Hasy oñenohê haĝua.
Hi'â aiporukuaa mbujape katu ndaiporúi che.
Teatro Cívico oikoteve ñepytyvô.
Amo 100 tapicha rupi oike.
Mbo'ehao ombokatupyrýva mo'âhararâme ohasa 5000 temimbo'e.
Che rembiapóniko amoî paracaida ha chaleco salvavidas upe ojevevepota jave okaha gotyo.
Kavaju ñemoñani ñanembovy'a.
Che mba'apoha heta.
CIA ogueru upe ta'ângamýi ONU-pe.
Ikatúpa hepyve 20 %-gui?
Nemoñandu porâiterei.
Ani reju mbo'ehaópe, rerukánte viru.
Ajapo ajavy'ÿre.
Umi ñoñe'ême'ê mba'aporâ ojehepyme'ê ñepysânga'ÿre.
Namohu'âi mbo'ehaovusu.
Chepy'apy ajavýramo upe techaukaha ndaikuaá rupi mba'e aravorâpa.
P. S. ko Viru oñeme'êva IMA-pe niko navida rehegua jopói neporâva.
kóva ko aty omba'apose ñande rekoha reko rehe.
Ahechamíta aĝave 'Black Eyed Pea'.
Ore aguyje peykekóre ko Idiapolis Museo de Arte 1999 ramo.
Ndoikuaái mboy virúpa nde rehupyty.
Ndoikói mba'eve ndereikuaáiramo mba'eve hesegua.
Aikókuri Texas-pe '80 pukukue.
Ahechase tembiapopy ikachiâiva.
Ikatu oime rereko peteî isâ ha isâkuaa'ÿva.
Ndorojapói mba'evete hi'aramboty rehegua.
Che videograbadora oiko porâiterei.
Oipyso jave upe toldo oñepyrûtavo onohê, ohechauka mokôi tembiporu upe aviô asu gotyo hykuva'ekue oveve aja.
Mba'epyahu ndojapói mba'eveguasu ñanderehe.
Rohójepi sapy'a upe óga okáyguápe.
Oho hikuái upe tape oî hetahápe jekaruha ha je'y'uha.
Ndaroviái ikatúne haĝua jaikove ñamano rire.
Texas-pe ikatu rereko mboka nde pópe mamo reikohápe.
Ha'e ohapýne upe kuatia.
Ko'â óga hepyve roha'arôvagui.
Oñembokatupyry jave horykuaa hikuái.
Oîniko viru ñongatupy ikatu haĝuáicha ojeporu ñembokatupyry mba'aporâme.
Ndaikuaái, avy'a ñañomongeta rehe tandepyhare porâite.
Ko atýpe henyhê tapicha oîva ka'irâimegui ha avei mondaha atýra oî ipype.
Aikotevêve marandu kóva rehegua.
Sapy'apy'a ha'use ka'avo jehe'a amo yvate.
Ñoha'ângahára ohupytyva'ekue Oscar oikova'ekue oguata Indiana rupi 1973 ramo.
Upe arateî oky 17 pulgada.
Pyrûha apu'a mbyte tuichakue 6 py.
Bov Lovell ikatu ombohovái pene mba'eporandu.
Ore ha IU ro'e nde tuichamba'eha.
Roñeha'âta pohenói peteîme ndapeme'êiva guive ko ary fiscal-pe ko'águi 45 ára pukukue rohupyty haĝua ro'eva'ekue rohupytytaha jasypotêi ára 30ha mboyve.
Hasýpe ajuhu.
Añehesa'ÿijóramo che, asê porâne.
Oje'e chupe oho haĝua upe kuimba'e ndive.
Ko'â mokôi ary oútava rehe 30$nte rehepyme'êta reime haĝua ipype..
Upe ñoñe'ême'ê mba'aporâ ipahaitepegua oñeme'êva'ekue Virginia-pe niko oime oñedemanda Gratín contrape ani haĝua oñepyrû hembiapo oga'apo rehegua pokarême ojehupyty rupi, nde reikuaa.
Peteî jeýnte oikóta.
Ajavy peteî hendápe.
Reñeñandu porâ peteî aravo rire.
Rodolph Anderson niko U2 atypegua.
Ha'e ikalida, tapicha nderorýva, oguapýta oimeraêva ndive, oñua'âta oimeraêva ndive.
Ipya'eve ohóvo.
Itavaygua reko meme.
Amoneî rire, opa.
He'íkuri outaha kurive.
Upe Teatro Cívico opyta Indiapolis-pe.
Ha'e oho hapykuere'ÿ rehe.
Oñembokatupyrýramo ikatu hory hikuái.
Oî porâ ohóvo.
Ndaháiva okápe añemoarandúvo upe mboyve.
Che jarýi onace jasypoteî ára peteîha 1910 ramo.
Ndaivairiete.
Upe mo'âhára aty oñorairôva'erâ oñekytî rupi iviru porupyrâ.
Tekotevê aikuaa upe ñeñani ñepysânga rehegua.
Upe gatillo ombokapu.
Oî ipypegua ikatútava ombopuahu iñeime.
Che jarýi onace 10 ary iñambue rire siglo.
Amoneîvo, ro'e romendataha upe árape.
Nde jopói iporâitereíta jaguerovy'a haĝua Ára 85º.
Ha'e chupe aikotevêveha marandu.
Mokôi atyjereve jajapóta ko arýpe ñamono'â haĝua viru.
Ikatu rehupive viru reme'êva ko arýpe 25 $-pe.
Mba'eve ndoikói nderejaporâiramo ne rembiapo.
Aguyje pe 100$ peme'ê rehe Indiapolis Museo de Arte-pe.
Tekotevê añepyrû añembokatupyry upe ñeñaníme.
Ha'e he'íkuri oujeytaha ko mba'apoha rendápe asaje.
Ndaikotevêi avave rehe.
Oheja hikuái Augusta y ha oho hikuái Atalnte-pe.
Umi ñoñe'ême'ê mba'aporâ iñapañuâi heta.
Pyrûha yvysa'y kangymi.
Upe Fiedeicomiso aty'i naimyakâhárai.
Viru reme'êva Sociedad Maennerchor-pe iviru arýpe ĝuarâ oipytyvô tuicha mbo'ehaópe.
Che nadajapokuaái chejehegui.
Ajevy ógape asaje karurâ ha apytu'u ka'arukue.
Ha'ete ku oñembyaíva.
Iporâ tava ha okaháre.
Loren Field omba'apo  upe mbo'ehao yty rendápe.
Sociedad Maennerchor-pe oipytyvô Bill Gates.
Ramona hekovepukukue oiko Concord-pe.
Ndaikatúi oiporu umi mbujape.
Ndaguerohorýi pe ha'e oîha.
Ikatu resegi regueroikepa vove umi marandu hendápe.
Ndojehejái chupe oike upe Museo-pe jepe'a'ypýpe.
Oî aviô rembiporu hykuva'ekue.
Aikuaa ha'e oikuaaha ndajapopamo'âiha kóva ko pyhare.
Che aiporavóta I'll Fly Away
Pe ary ohasava'ekue reme'ê hetáma, ko arýpe ikatu rembogueju 25$-pe
Aikuaa ko apañuâi ndepy'apyha katu eha'arô repytuha ára.
Rorekóva Rudolph Anderson, peteîva umi mbohapy U2 atypegua
Ñaikotevê guetei 100.000 $ve jahupyty haĝua upe ja'eva'ekue ñamono'ôtaha ko arýpe.
Nahániri, ndaroviái, kóva noîporâi.
Pya'eterei ajuhu.
Umi viru ome'êva ipy'aporâva rupive heta mba'e rohupyty.
Ndatekotevêi añembokatupyry.
Arahauka.
Opaite viru oñeme'êva mbo'ehaópe, 100% nde reme'êva ojeporúta arandu rekarâ.
Añeha'â aikuaa moôpa ohopa viru.
Tetâ vore Indiana  oreko peteìete mbo'ehao ñepohâno rehegua.
Roikuaapa U2 rehegua.
Jasypo ára 1ha mboyve tekotevê jaikuaáma máva omboguahúta iñeime ikatu haĝuáicha jaikuaa oipytyvôtava 1991 aja.
Ha'e ndachemoaguaraietevoi.
Ñoha'ânga tavaygua niko noipytyvôguasúi ñoha'ângahárape oñembokatupyryve haĝua.
Peteî tembiapo ipyahúva ha iporâva.
Upe ta'ânga noheha ojepe'ákuri.
Oiko hikuái peteî óga morotîme oîva Broed Street ári.
Tekotevê añepyrû añembosako'i.
Repytava'erâ upepete!
Oî porâ túva ome'êva heta jopói.
Amba'apo jave ógape ao jyva kuara rei rehente aime.
Norome'êi pumbyy rupive ikatúgui ndaisegupái.
IRT niko omba'apo manga ñembosaráipe.
Ikatu resegi remoingepa vove.
Peteî mba'e iporâva jahupytýva niko upe jaha oparupi, javiaha.
Ahendupaite ha'e he'iva'ekue.
Na… ndaipóri mba'eve ivaíva túva ome'êmbátava orekóva tapicha ndeichagua rehe.
Ohepyme'ê oñeñangareko haĝua mymba rehe upe oñeñongatuhápe.
Hepyrasa icombustible ha py'ÿinte acargamanteva'erâ.
Ára pukukue ahasa ñorairôhápe peteî ñemuhára kuatia iñapañuâi rehe.
Remoñe'êpiko The firm?
Ha'e ndaikatúi oho..
Ndojehejái chupe oike.
hgh
Joe omano ha añetehápe avave ndovy'ái.
Ndopamo'âivoi.
Che ajepy'apy ndaikuaái rupi mba'eravorâpa.
Aguyje, katu ndoroaguyjeme'êmo'âi peème napemoĝuahêi rehe pende viru 1999 ramo.
Ndarekopái marandu.
Ñaikotevê 10.000 $ iguýre oñeme'êva ikatu haĝuáicha ñanohê ñande aranduka aty ko'aĝagua.
Nde pire naiñambuemo'âi.
Sapy'apy'a ha'use ka'avo jehe'a.
Ha'e ku novela mba'e.
Tandepyhareveporâiterei!! Iporâite ñañomongeta internet rupive.
Naha'aôkuaái aike haĝua upe Third SS-pe.
Ha'e griego.
Ha'e opyta Augustare-pe upe?
Oveve hetave 20000 millas-gui peteî aravópe
Ohasa 99% rupi hi'ári.
He'i oñe'êmbamahague.
Upe arateîme okýkuri.
Oî tapicha oimo'âva umi rríkonte ikatuha ome'ê.
Tekotevê rombokatupyryve mbo'ehárape.
Ha chepy'ara'â sapy'ánte upe havilla ha sapy'ánte nahániri. Meme nahániri voi.
Jeho niko upe mba'e iporâva jahupytýva kóvape.
Ikatu reme'ê viru pumbyry rupive.
Oî angirû oguerovy'áva sy ára.
Upe jeike repy ojupíta ohóvo ohasávo ary.
Mondaha oikuaa jagua pya'eterei okirirîha.
Ohepyme'ê oñeñangareko, oñemongaru ha oñembohóga haĝua hetaiterei mymba ha ka'avo upe mymba rendápe.
Che namendáiva ko'áĝa peve.
Atyha nemba'eichagua oipytyvô oiko haĝua joaju nepoâva ko'âko'êre.
Umi ao pópente ojejapo.
Iporâitereirasa umi 2 hectárea pota rupi ñemitÿ hechapyrâva ombojoparáva yvotykuaa, marandu ka'avo rehegua ha porâ ra'ânga hechapyrâva.
Indiana Atyha tetâmegua Tâi rehegua he'i ome'êtaha 1 millón dólar mbo'ehao tâi reheguápe.
Jajuecha peve!
He'íkuri isýpe oĝuahêhague hógape.
Areko videograbadora oiko porâva gueteri.
Ñane mbo'ehao oñembokatupyryhápe mo'âhararâ oikotevevê viru okakuaave haĝua.
McCoy ojerure 250000 $.
Ha'e nde'íri mba'evete.
Opavave oñangareko hogapýre tou oúva.
Areko 20 $-nte ojehepyme'êha ára peve.
Ajapo ajapova'erâ ko árape.
Upe situniko ikatu ombyai ñande katypyry ñambosako'ívo vy'a guasu ambue arýpe.
Umi ñoha'ângahára katupyry oîva oñepyrû omba'apo ñoha'ânga tavayguápe.
Jet oveve 20000 millas peteî aravópe.
Ñane aranduka aty ñanohêva ko'áĝa niko oiporu upe viru jeporurâ jerekóva peteî arýpe ĝuarâgui peteî vore mbohapýguinte.
Cheñyrô, rohepyme'ê oikuaávape. Mitâ ñeñangareko, katu rohepyme'ê okapaguáichante avei.
Ivaieterei.
Upe jeike repy tuichaiterei ojupi.
Añeha'â ahupytyty peteî mba'e.
ro'y 70 rupi ndaipóriva'ekue ñoha'ângahára Indiana rupi.
Ndaikatúi ha'u kamby.
Ikatu 1500 pypegua ombopyahu iñeime.
Ndaipóri káso, jahechátamente marandu apegua.
Sapy'ánte osyryporâiterei árupi upe joaju.
Ñande ñane garantíama ikatutaha ñambosako'i vy'aguasu 10 ary pukukue toiko oikóva.
mmm, iporâ resê ha re'u ka'avo jehe'a.
McCoy oikotevêve viru, katu ko'áĝa ojejure 10.000 $.
Ndoroikuaáikuri mba'e añápa upe U2.
Rombyai ha romohendajey.
Upe soporte fisiológico iñambue upe tekove rehegua soporte-gui oiporúva umi pilóto ta'ânga onohêva ijyvatekue tuicháva 80.000 py peve ha agueru jey.
Ha'e nontendeporâi'anga iñe'ê ambue rupi.
Oî ñoha'ângahára ohupytyva'ekue Oscar ohechaukava'ekue hembiapo Indiana-pe 1973 ramo.
Ko atýpe heta mba'e ho'a porâ.
Remoñe'êpiko La firma?
Ambotove ha ipuku hetaverei.
Ko arateî ipaitepegua, japypotî ára 18ha, oky ha sa'ieterei oúva upe techaukarâ oñe'êva mombe'ugua'u, mombe'upy ha tembiasakue rehe, upe Keepers of the Lore/Joseph Campbell ko arypegua.
Ramona oî Concord-pe.
Añetehápe chupe nahesakâi.
Ahendu ere ndere'useiha tembi'u reikuaa ramóva.
Isýi rei.
Ha'e hory ha ijeroviapy.
Ha'e chemoñandu porâitereíkuri aikuaaha peve máva ndivepa oî.
Oî tapicha ikatu'ÿva oñangareko ambue tapicha rehe.
Amba'apo.
Granny opyta upe ogaguýpe.
Remoñe'êpiko The Soft?
Oimo'â hikuái ko atyha ombyataha táva.
Pira vera, mbói, umívante oreko upe pyrûha rembe'y.
Namba'apóiva.
ko Atyha oipytyvô ambue hendapeguánte.
Nde reme'êvagui mbytete rupi roiporu ñesâmbyhýpe.
Oiko hikuái peteî óga vaimíme Main Street-pe.
Umi mymba oìva upe tendápe ohupyty 100$ peteì arýpe oñeñangareko ha oñemongaru haĝua.
Ñane Mbo'ehao oñembokatupyryhápe mo'âhararâme oipytyvô Fundación Melinda ha Bill Gates.
Ko atýpe henihê Ivy League remimbo'ekuegui ha tapicha ipy'aporâvagui.
He'i ohenoitaha oĝuahê vove hógape.
Upe Teatro Cívico opyta Tampa-pe.
Aimo'â reho ra'e campamento-pe.
Naimeietevoi upe pohâ vai rehegua ñehesa'ÿijo ojejapóvo.
Ahájepi py'ÿi che cooperativa oipurukáva virúpe.
Ikatu jaha ñasena jahecha rire upe mba'eporâ.
Ñanembojeguaru!!
JoAnn he'i ha'e ha Urban nda'areguasúi omendahague ohoramoguare Vietnam-pe.
Iporâ okaháre.
Hetápe ĝuarâ, umi ipy'aporâva opoipytyvôva umi rríko ojehechauka haĝuánte.
Mondahápe ndo'aporâi jagua.
Pyrûha oreko Mburuvicha rechaukaha.
Noromokyre'ÿ nde kerayvotývo orendive.
Ndokapumo'âi upe gatillo'ÿre.
Revy'ápa ko marandu ñemyasâi joajúpe rehe?
Ahákuri upe ñomongetarâ Satelite rupive ojejapóvape.
10000 millas-nte ohupyty peteî aravópe.
Oî angirû ojopyýva ome'ê haĝua brunch sy ára rehegua.
McCoy ojejure toñepytyvômi 10.000$pe.
Umi biomas oha'â umi mymba rekoha añete.
Upe rerekóvaniko añetehápe isâvante.
Grand Rapids peteî tenda neporâva.
Jahupyty porâ ñañemoîramo ñamono'ô viru.
Umi ao ojejapopaite fábrica-pe.
Ipya'ekue chembotarovapotáma.
Ore roimo'â ha'e oho hague, katu opyta.
Oho ytýpe.
Iporâ'i.
Joaju neporâva nilko oî ko'êko'êre oî rupi upe Aty Joajurâ ñepytyvô oî rupi ipype atyha nemba'eichagua.
IU-pegua mbo'ehao mo'âhára oñembokatupyryha oreko 1000 temimbo'e.
Indiana oreko amo 20 mbo'ehao rupi ñepohâno rehegua iporâporâva.
Ha'e ndoikuaái moôpa omañava'erâ.
Ajevy che apykápe.
Rehasakuaava'erâ ambue tapicha ohasáva.
Nemoñandu vaieterei.
Um, rehenóiva'erâ Ramona-pe Concord-pe. Ehechakuaa kóva mba'apo rendaha. Añetehápe, cliente oî ambue táva rembe'ýpe. Ñaime Monroe-pe. Ha'e oî Concord-pe.
Ivai añete.
Oî ñoha'ângahára oñembokatupyrýva ñoha'ângaha tavayguápe.
Che rembireko ha che poteî roreko.
Loren Field omba'apo  upe mbo'ehaópe
Ndorokakuaaseiete.
Mbo'ehao ombokatupyrýva mo'âhararâmegui osê 20 mo'âhárante.
Ndorohóiva upe óga okayguápe.
Arahauka káha Japón-pe.
Ndacheviruhetái ko'áĝa.
General May ha umi pilóto ohasa porâiterei ohóvo hikuái upoe mba'apoha rendápe.
túva oreko heta mba'e.
Nde atyha'ÿre ko'â joaju neporâva ndoikoramo'â márô.
Ikatu penderoryeterei avei peñembokatupyry rire.
Ahesa'ÿijomíta.
Nda'úi mba'eveichagua so'o.
Ajavy peteî hendápe arahaukávo upe ñemyenyhêmbyrâ.
Rovy'aiterei peipytyvô rehe Museo-pe.
Opavave ógape ndovy'a ohechaga'u rupi Joe-pe.
Oî gueteri upe hyepýpe
Nembotavyai ipuku lája ko demanda.
Ha'e oñe'ênte gueteri.
Ñañe'êve jahávo.
Upe techaukarâ niko ojogua Days of Our lives-pe.
Aikua ohohague Augustagui upe riremíntema.
Upáva ikatu ombohetave vai apoha.
Oñeha'arô romaña aviô rehe.
Pyrûha sa'yky mimbi ha oreko Bart Simpson ra'ânga
Itúva márô ndorekóiva mba'eve.
Aikotevêve mrandu ha'e haĝua mba'eichagua mba'yrúpa ajoguáta.
Upe detonador ombokapu upe mboka.
Upe viru oupanunga upe jeikerâ jehepyme'êgui.
Rombosako'i chupe vy'aguasu kañyhapete hi'aramboty rehegua.
Tembiapo guasu tekotevêva ajapo.
Pya'eterei iñambue oñembokatupyry aja hikuái.
Che jarýi o'ararecha 1910-pe, mitâkuña'iva'ekue ha'e.
Aikuaa ndajaikuaaiha mba'evete ja'eva'erâgui.
kóva General May ha mbohapy U2 pilóto mburuvichavete Kennedy mba'apoha rendápe.
Ko'âichagua tembiapo Young Library Leaders ha Love is Reading Together Week , ojejapo mitâpyahúpe ĝuarâ ha omokyre'ÿ voi guive  iñarandukakotyrayhu haĝua
Nde viru oipytyvô iporâ haĝua opaite mba'e museo-pe ha ombokatu rohupyty mba'e pyahu.
Natekotevêi añorairô ko mba'e rehe.
Upe Teatro Civic Indiapolis-gua ojapo heta tembiapo neporâva 80 ary pukukue.
