Filename: dev.gn
Number of lines: 995
Total number of tokens: 7191
Number of unique tokens: 3367
Total number of characters in file: 48516
Total number of characters in unique tokens: 28193
Total number of unique characters: 70
Average token length of all tokens in file: 6.746766791823112
Average token length of all unique tokens in file: 8.373329373329373
