Filename: dev.gn
Number of lines: 479
Total number of tokens: 2828
Number of unique tokens: 1630
Total number of characters in file: 22976
Total number of characters in unique tokens: 15584
Total number of unique characters: 71
Average token length of all tokens in file: 8.124469589816124
Average token length of all unique tokens in file: 9.560736196319018
