Filename: train.gn
Number of lines: 11523
Total number of tokens: 133444
Number of unique tokens: 22394
Total number of characters in file: 1051574
Total number of characters in unique tokens: 224943
Total number of unique characters: 109
Average token length of all tokens in file: 7.880264380564132
Average token length of all unique tokens in file: 10.044788782709654
