Filename: train.gn
Number of lines: 26009
Total number of tokens: 405548
Number of unique tokens: 48921
Total number of characters in file: 2719226
Total number of characters in unique tokens: 428722
Total number of unique characters: 120
Average token length of all tokens in file: 6.7050657382110135
Average token length of all unique tokens in file: 8.763557572412665
